1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h: Remove GUI_ prefixes from GUI_Color and GUI_PixelValue.
	Notes about XPixmap and XDrawer.  Remove GUI_ButtonRight.  Add
	ButtonLeft, ButtonMiddle, and ButtonRight defines.  Use #import
	for tkobjc/common.h and tkobjc/global.h.  Rename class XColormap
	to Colormap and BLTGraph to Graph.  Add @class Entry.  Add
	getParent for Widget.  Add fillRectangeX0:Y0:X1:Y1:Color: to
	Raster.  Add moveX:Y: to CompositeItem.

1998-01-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h: Remove some USING tags. 

1998-01-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Widget): Remove setBorderWidth.  Add packToRight.
	(Frame): Change enableRelief to setRelief:. Add setBorderWidth to 
	Frame.
	(Label): Remove anchorEast, anchorWest, colorBlue.
	(ClassDisplayLabel, VarProbeLabel, ClassDisplayHideButton): Added.
	(SuperButton): Add createEnd, setOwner, setUser.
	Add ClassDisplayLabel, VarProbeLabel.

1998-01-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

        * gui.h: New file.